# neapolitan

./: .gitignore  CHANGELOG.rst  LICENSE  Notes.txt  README.rst  justfile  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: Makefile
docs/source/: conf.py  crud-view.rst  how-tos.rst  index.rst  templates.rst  tutorial.rst
examples/bootstrap/: object_confirm_delete.html  object_detail.html  object_form.html  object_list.html
examples/bootstrap/partial/: detail.html  list.html
more_tests/another_test_app/: models.py
more_tests/another_test_app/migrations/: 0001_initial.py
more_tests/templates/: base.html
more_tests/test_app/: models.py  tests.py
more_tests/test_app/migrations/: 0001_initial.py
more_tests/test_project/: asgi.py  settings.py  wsgi.py
src/neapolitan/: __init__.py  views.py
src/neapolitan/management/commands/: mktemplate.py
src/neapolitan/templates/neapolitan/: object_confirm_delete.html  object_detail.html  object_form.html  object_list.html
src/neapolitan/templates/neapolitan/partial/: detail.html  list.html  pagination.html
src/neapolitan/templatetags/: neapolitan.py
src/neapolitan/utils/: __init__.py  common.py
tests/: models.py  settings.py  test_neapolitan.py  tests.py
tests/another_test_app/: apps.py  tests.py
tests/migrations/: 0001_initial.py  0002_bookmarkcollection.py  0002_namedcollection.py  0002_project.py
tests/templates/: base.html  custom_base.html
tests/test_app/: tests.py  urls.py  views.py
tests/test_project/: settings.py  urls.py
