[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neapolitan"
authors = [{name = "Carlton Gibson", email = "carlton.gibson@noumenal.es"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["Django"]

[project.urls]
Home = "https://noumenal.es/neapolitan/"

[project.optional-dependencies]
docs = ["Sphinx"]
